# noctalia-shell

./: CLAUDE.md  FORK-NOTES.md  README.md  justfile  meson.build  meson_options.txt
.github/workflows/: sync-fork.yml
Assets/: settings-default.json
Assets/Translations/: en.json
Commons/: IconsTabler.qml  Settings.qml
Modules/Bar/Widgets/: CLAUDE.md  SystemMonitor.qml
Modules/MainScreen/Backgrounds/: AllBackgrounds.qml
Services/System/: SystemStatService.qml
Services/UI/: BarWidgetRegistry.qml
assets/translations/: be.json  cs.json  en.json  fr.json  it.json  nl.json  nn.json  zh-Hans.json
plugins/noctalia-sysmon-extras/: README.md  plugin.toml
plugins/noctalia-sysmon-extras/contrib/: 99-rapl-readable.rules
plugins/noctalia-sysmon-extras/desktop/: cpu_panel.luau
plugins/noctalia-sysmon-extras/translations/: en.json
plugins/noctalia-sysmon-extras/widgets/: coolant.luau  cpu_cores.luau  cpu_watt.luau  watt.luau  (+1 more)
src/app/: application.cpp  application.h  application_ipc.cpp  application_services.cpp  application_ui.cpp
src/capture/: screencopy_capture.cpp  screencopy_capture.h  screenshot_service.cpp
src/config/: config_overrides.cpp  config_service.cpp  config_service.h  config_types.cpp  config_types.h
src/core/: process_fds.cpp  toml.h
src/launcher/: usage_tracker.cpp
src/scripting/: script_runtime.cpp
src/system/: keyboard_backlight_service.cpp  keyboard_backlight_service.h  system_monitor_service.cpp  system_monitor_service.h
src/wayland/: text_input_service.cpp  text_input_service.h  wayland_connection.cpp  wayland_connection.h
(+51 files in other folders)
