option('jemalloc', type: 'feature', value: 'auto', description: 'Use jemalloc on glibc builds')
option('tests', type: 'feature', value: 'auto', description: 'Build unit tests (auto: on for unsanitized debug builds)')
option('system_tomlplusplus', type: 'boolean', value: false, description: 'Use system tomlplusplus instead of vendored')
